kubernetes/deploy/proxies/internal/beszel/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: beszel
subsets:
  - addresses:
      - ip: 192.168.3.40
    ports:
      - port: 8090
        name: http
