kubernetes/deploy/proxies/internal/beszel/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: beszel
spec:
  ports:
  - protocol: TCP
    port: 8090
    name: https
    targetPort: 8090
