kubernetes/deploy/proxies/internal/beszel/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: beszel
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`beszel.vandeneede.org`)
    services:
    - name: beszel
      port: 8090
